force-app/main/default/objects/Quotation__c/Quotation__c.object-meta.xml
<CustomObject>
    <label>Quotation</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Quotation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>