force-app/main/default/objects/Quotation__c/fields/Charge_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Charge_Bucket__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Charge Bucket</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>