force-app/main/default/objects/Quotation__c/fields/Stamp_Duty_Registration__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Duty_Registration__c</fullName>
    <label>Stamp Duty &amp; Registration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>