force-app/main/default/objects/Quotation__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <formula>Agreement_Value__c  +  GST_Amount__c  +  Stamp_Duty_Registration__c  +  Other_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>